--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <article class="container">
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+        <a href="/" class="navbar-brand">Whiskey Drop</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item mr-2 d-block d-sm-none"><a class="nav-link" href="/login">Sign in / Sign up</a></li>          
+        </ul>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
+            <a href="/login">Sign in / Sign Up</a>
+        </div>
+    </nav>
+    <article class="container mt-3">
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-               <section class="callout">
+               <section class="callout jumbotron">
                   <h1>The finest whiskeys delivered to your doorstep.</h1>
                   <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
                   <s>$19.99</s> <strong><mark>First one is free!</mark></strong></p>
